[gd_scene load_steps=2 format=3 uid="uid://bj5kped7th8x1"]

[ext_resource type="Script" path="res://Code/UI/UIProfileManagementMenu.gd" id="1_jrth3"]

[node name="ProfileManagementMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jrth3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ProfileList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
allow_reselect = true
max_text_lines = 4
auto_height = true
max_columns = 3

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NewProfileButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "New Profile"

[node name="EditProfileButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Edit"

[node name="DeleteProfileButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Delete"

[node name="BackButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Back"

[node name="EditContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProfileNameEdit" type="LineEdit" parent="VBoxContainer/EditContainer"]
layout_mode = 2

[node name="ProfileColorPicker" type="ColorPickerButton" parent="VBoxContainer/EditContainer"]
layout_mode = 2

[node name="SaveProfileButton" type="Button" parent="VBoxContainer/EditContainer"]
layout_mode = 2
text = "Save Profile"
